fixed css, made video stretch with black bars (firefox only)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,8 @@
 }
 
 #video {
+  object-position: center;
   object-fit: fill;
-  width: canvas.width;
-  height: canvas.height;
+  width: 100%;
+  height: 100%;
 }
